# pywhich

./: .travis.yml  pyproject.toml  pytest.ini
tests/: test_which.py
which/: __init__.py  __main__.py
