[tool.poetry]
name = "which"
version = "0.1.0"
description = ""
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pyfakefs = "^3.5"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
